--- a/PDFtoPrinter.NetCoreSample/PDFtoPrinter.NetCoreSample.csproj
+++ b/PDFtoPrinter.NetCoreSample/PDFtoPrinter.NetCoreSample.csproj
@@ -2,11 +2,11 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net9.0-windows</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="PDFtoPrinter" Version="1000.0.0" />
+    <ProjectReference Include="..\PDFtoPrinter\PDFtoPrinter.csproj" />
   </ItemGroup>
 
   <ItemGroup>
